[tool.poetry]
name = "repl-html-world-builder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_html_world_builder"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
werkzeug = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
